# plugin-torture

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  flake.nix
imgui/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.hpp  globals.hpp  gui.cpp  gui.hpp  main.cpp  main.hpp  processor.cpp  processor.hpp
src/processor/: empty.cpp  empty.hpp  lv2.cpp  lv2.hpp
